- fix map page appear in leaflet button error - add shadow behind navbar (except add button)

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,13 +12,17 @@ body {
   background-color: var(--bg-light);
   color: var(--text-dark);
   line-height: 1.6;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
   background-color: var(--primary);
   color: rgb(243, 163, 79);
   padding: 1rem;
+  position: relative;
+  z-index: 1001;
 }
 
 header h1 {
@@ -26,14 +30,14 @@ header h1 {
 }
 
 main {
-  padding: 1rem;
-  padding-bottom: 100px;
-  max-width: 100%;
   margin: 0 auto;
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
-  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -150,6 +154,11 @@ article img {
   margin-bottom: 1rem;
 }
 
+#map-container {
+  width: 100%;
+  flex: 1;
+}
+
 .custom-map-button {
   background-color: #fff;
   border: 1px solid #ccc;
@@ -263,7 +272,6 @@ nav {
 nav a {
   color: white;
   text-decoration: none;
-  margin-right: 1rem;
   font-weight: inherit;
   transition: background-color 0.2s ease;
   border-radius: 8px;
@@ -286,6 +294,10 @@ button {
   text-decoration: none;
   font-weight: bold;
   color: #727272;
+  color: #727272;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .nav-links button {
@@ -296,6 +308,11 @@ button {
   text-decoration: none;
   font-size: inherit;
   padding: 0;
+}
+
+.nav-links .nav-active {
+  background-color: #e5e7eb;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
 }
 
 .logout-button {
@@ -320,18 +337,6 @@ button {
   height: 3px;
   background: #333;
   border-radius: 2px;
-}
-
-body.map-view-active #main-content {
-  padding: 0;
-  margin: 0;
-  max-width: none;
-  height: calc(100vh - 8rem);
-}
-
-body.map-view-active #map-container {
-  height: 100%;
-  width: 100%;
 }
 
 .leaflet-top,
@@ -431,7 +436,6 @@ form label span {
     display: flex;
   }
 
-
   .nav-links {
     display: none;
     position: absolute;
@@ -439,6 +443,7 @@ form label span {
     left: 0;
     flex-direction: column;
     background: white;
+    /* This provides the background color */
     width: 100%;
     padding: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -447,6 +452,11 @@ form label span {
 
   .nav-links.show {
     display: flex;
+  }
+
+  .nav-links a[href="#/add"] {
+    width: 100%;
+    justify-content: center;
   }
 }
 
